@@ -79,7 +79,7 @@
       <Name>Castle.DynamicProxy</Name>
       <HintPath>..\bin\Castle.DynamicProxy.dll</HintPath>
     </Reference>
-    <Reference Include="nunit.framework, Version=2.2.8.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL" />
+    <Reference Include="nunit.framework, Version=2.3.6162.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL" />
     <Reference Include="System">
       <Name>System</Name>
     </Reference>
@@ -126,6 +126,7 @@
     <Compile Include="ChildContainerSupportTestCase.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="CircularDependencyTests.cs" />
     <Compile Include="Components\CalculatorService.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -135,6 +136,7 @@
     <Compile Include="Components\CalculatorServiceWithLifecycle.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Components\CircularDependencyComponents.cs" />
     <Compile Include="Components\DotNet2Components.cs" />
     <Compile Include="Components\Employee.cs">
       <SubType>Code</SubType>
